--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -71,6 +71,8 @@ include::ch-xsql-commands.adoc[]
 
 include::ch-clustering.adoc[]
 
+include::chapter_security_considerations.adoc[]
+
 = Project-specific Installation Guides
 
 include::opflex/agent-ovs-install.adoc[]
