Bug 2572 - Document and provide tutorial for Websockets for Notifications
* added tutorial for websocket notifications subscription

Change-Id: I76313ee220e7aea7a71a4353c521a7966371c67c
Signed-off-by: Jan Hajnar <jhajnar@cisco.com>
(cherry picked from commit 50f1db5232c05866fc0f8397933edf9d0794d41a)

--- a/manuals/developer-guide/src/main/asciidoc/controller/controller.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/controller/controller.adoc
@@ -49,4 +49,6 @@ include::md-sal-rpc-routing.adoc[MD-SAL Rpc Routing]
 
 include::restconf.adoc[RESTCONF]
 
+include::websocket-notifications.adoc[Websocket Notifications]
+
 include::config.adoc[Config Subsystem]
