--- a/manuals/user-guide/src/main/asciidoc/openflowplugin/odl-ofp-end-to-end-meters.adoc
+++ b/manuals/user-guide/src/main/asciidoc/openflowplugin/odl-ofp-end-to-end-meters.adoc
@@ -1,45 +1,48 @@
-=== End to End Meters
 
-The purpose of this section is to walk you through how to program meters end to end with the openflowplugin using OpenFlow 1.3.
+===== Instructions
 
-==== Instructions
 
-===== Prerequisites
-1. Learn “End to End” for Inventory
-2. Check inventory:
-* Run mininet with support for OF 1.3 as described in the “End to End Inventory” section.
-* Make sure you see the openflow:1 node come up as described in the “End to End Inventory” section
+====== Learn End to End for Inventory
 
+* <<odl-ofp-end-to-end-inventory_introduction-introduction,End to End Inventory>>
+
+====== Check inventory
+
+* Run mininet with support for OF 1.3 as described in
+<<odl-ofp-end-to-end-inventory_introduction-introduction,End to End Inventory>>
+* Make sure you see the openflow:1 node come up as described in
+<<odl-ofp-end-to-end-inventory_introduction-introduction,End to End Inventory>>
 
 [[meter-strategy]]
-===== Meter Strategy
+====== Meter Strategy
 
-Current way to flush a meter to switch looks like this:
+Current way to flush a meter to switch looks like this: 
 
-1.  create MD-SAL modeled flow and commit it into dataStore using two
+. create MD-SAL modeled flow and commit it into dataStore using two
 phase commit
-2.  FRM gets notified and invokes corresponding rpc (addMeter) on
+. FRM gets notified and invokes corresponding rpc (addMeter) on
 particular service provider (if suitable provider for given node
 registered)
-3.  the provider (plugin in this case) transforms MD-SAL modeled meter
+. the provider (plugin in this case) transforms MD-SAL modeled meter
 into OF-API modeled meter
-4.  OF-API modeled meter is then flushed into OFLibrary
-5.  OFLibrary encodes meter into particular version of wire protocol and
+. OF-API modeled meter is then flushed into OFLibrary
+. OFLibrary encodes meter into particular version of wire protocol and
 sends it to particular switch
-6.  check on mininet side if meter is installed
+. check on mininet side if meter is installed
 
 [[push-your-meter]]
-===== Push your Meter
+====== Push your Meter
 
 * Using PostMan:
 ** Set Request Headers
 *** Content-Type: application/xml
 *** Accept: application/xml
 ** Use URL:
-http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/1
+"http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/1"
 ** Method:PUT
 ** Request Body:
 
+[source, xml]
 --------------------------------------------------------------
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <meter xmlns="urn:opendaylight:flow:inventory">
@@ -63,19 +66,15 @@ http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/
 </meter>
 --------------------------------------------------------------
 
-* ** Note: If you want to try a different meter id, make sure the URL
+NOTE: If you want to try a different meter id, make sure the URL
 and the body stay in sync. For example, if you wanted to try: meter-id
-20 you'd change the URL to
+20 you'd change the URL to "http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/20" but you would also need to update the 20 in the body to match.
 
-http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/20
-
-but you would also need to update the 20 in the body to match.
-
-* ** Note: :Provide the IP Address of the machine on which the
+NOTE: :Provide the IP Address of the machine on which the
 controller is running.
 
 [[check-for-your-meter-on-the-switch]]
-===== Check for your meter on the switch
+==== Check for your meter on the switch
 
 * See your meter on your CPqD switch:
 
@@ -91,29 +90,28 @@ stat_repl{type="mconf", flags="0x0", stats=[{meter= c"", flags="4", bands=[{type
 ----------------------------------------------------------------------------------------------------------------------------------------------
 
 [[check-for-your-meter-in-the-controller-config-via-restconf]]
-===== Check for your meter in the controller config via RESTCONF
+====== Check for your meter in the controller config via RESTCONF
 
 * See your configured flow in POSTMAN with
 ** URL
-http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/1
+"http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/1"
 ** Method: GET
 ** You should no longer need to set Request Headers for Accept
 ** Note: :Provide the IP Address of the machine on which the controller
 is running.
 
 [[look-for-your-meter-stats-in-the-controller-operational-data-via-restconf]]
-===== Look for your meter stats in the controller operational data via
-RESTCONF
+====== Look for your meter stats in the controller operational data via RESTCONF
 
 * See your operational meter stats in POSTMAN with
 ** URL
-http://:8080/restconfig/operational/opendaylight-inventory:nodes/node/openflow:1/meter/1
+"http://:8080/restconfig/operational/opendaylight-inventory:nodes/node/openflow:1/meter/1"
 ** Method: GET
 ** Note: :Provide the IP Address of the machine on which the controller
 is running.
 
 [[discovering-and-testing-meter-types]]
-==== Discovering and testing Meter Types
+===== Discovering and testing Meter Types
 
 Currently, the openflowplugin has a test-provider that allows you to
 push various meters through the system from the OSGI command line. Once
@@ -122,7 +120,7 @@ then use them to see in the config what a particular meter example looks
 like.
 
 [[using-addmeter]]
-===== Using addMeter
+====== Using addMeter
 
 From the
 
@@ -145,21 +143,21 @@ Once you've done that, use
 * GET
 * Accept: application/xml
 * URL:
-http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/12
+"http://:8080/restconf/config/opendaylight-inventory:nodes/node/openflow:1/meter/12"
 ** Note: :Provide the IP Address of the machine on which the controller
 is running.
 
-Note: Before attempting to PUT a meter you have created via addMeter,
+NOTE: Before attempting to PUT a meter you have created via addMeter,
 please change its URL and body to, for example, use meter 1 instead of
 meter 2 or another Meter Id, so you don't collide.
 
-Note: There are several test command providers and the one handling
+NOTE: There are several test command providers and the one handling
 Meter is *OpenflowpluginMeterTestCommandProvider*. Methods, which can be
 used as *commands in OSGI-console* have prefix '_'. Examples: addMeter,
 modifyMeter and removeMeter.
 
 [[example-meter]]
-==== Example Meter
+===== Example Meter
 
 Examples for XML for various Meter Types can be found in the
 test-scripts bundle of the plugin code with names m1.xml, m2.xml and
