--- a/manuals/user-guide/src/main/asciidoc/openflowplugin/odl-ofp-end-to-end-inventory.adoc
+++ b/manuals/user-guide/src/main/asciidoc/openflowplugin/odl-ofp-end-to-end-inventory.adoc
@@ -1,7 +1,7 @@
-[[]]
-=== End to End Inventory
+[[odl-ofp-end-to-end-inventory_introduction-introduction]]
+===== Introduction
 
-The purpose of this section is to walk you through how to see the Inventory
+The purpose of this page is to walk you through how to see the Inventory
 Manager working end to end with the openflowplugin using OpenFlow 1.3.
 
 Basically, you will learn how to:
@@ -15,8 +15,8 @@ OpenDaylight_OpenFlow_Plugin::Test_Environment[OpenFlow 1.3 Enabled
 Software Switches / Environment]
 3.  Use RESTCONF to see the nodes appear in inventory.
 
-[[restconf-for-inventory]]
-==== Restconf for Inventory
+[[odl-ofp-end-to-end-flows_restconf-for-inventory]]
+===== Restconf for Inventory
 
 The REST url for listing all the nodes is:
 
@@ -45,3 +45,28 @@ for example
 http://localhost:8181/restconf/operational/opendaylight-inventory:nodes/node/openflow:1
 ---------------------------------------------------------------------------------------
 
+[[odl-ofp-end-to-end-flows_how-to-hit-restconf-with-postman]]
+====== How to hit RestConf with Postman
+
+https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en[Install
+Postman for Chrome]
+
+In the chrome browser bar enter
+
+--------------
+chrome://apps/
+--------------
+
+And click on Postman.
+
+Enter the URL. Click on the Headers button on the far right. Enter the
+Accept: header. Click on the Basic Auth Tab at the top and setup the
+username and password. Send.
+
+[[odl-ofp-end-to-end-flows_known-bug]]
+===== Known Bug
+
+If you have not had any switches come up, and though no children for
+http://localhost:8080/restconf/datastore/opendaylight-inventory:nodes/
+and exception will be thrown. I'm pretty sure I know how to fix this
+bug, just need to get to it :)
