--- a/manuals/user-guide/src/main/asciidoc/openflowplugin/odl-ofp-end-to-end-topology.adoc
+++ b/manuals/user-guide/src/main/asciidoc/openflowplugin/odl-ofp-end-to-end-topology.adoc
@@ -1,21 +1,20 @@
-=== End to End Topology
+[[introduction]]
+===== Introduction
 
-The purpose of this section is to walk you through how to see the Topology
+The purpose of this page is to walk you through how to see the Topology
 Manager working end to end with the openflowplugin using OpenFlow 1.3.
 
 Basically, you will learn how to:
 
 1.  Run the Base/Virtualization/Service provider Edition with the new
 openflowplugin:
-OpenDaylight_OpenFlow_Plugin::Running_controller_with_the_new_OF_plugin[Running
-the controller with the new OpenFlow Plugin]
+<<odl-ofp-running-controller-with-the-new-of-plugin_top,Running the controller with the new OpenFlow Plugin>>
 2.  Start mininet to use OF 1.3:
-OpenDaylight_OpenFlow_Plugin::Test_Environment[OpenFlow 1.3 Enabled
-Software Switches / Environment]
+<<odl-ofp-test-environment_top,OpenFlow 1.3 Enabled Software Switches / Environment>>
 3.  Use RESTCONF to see the topology information.
 
 [[restconf-for-topology]]
-==== Restconf for Topology
+===== Restconf for Topology
 
 The REST url for listing all the nodes is:
 
@@ -44,3 +43,19 @@ for example
 http://localhost:8080/restconf/operational/network-topology:network-topology/topology/flow:1/
 ---------------------------------------------------------------------------------------------
 
+[[how-to-hit-restconf-with-postman]]
+====== How to hit RestConf with Postman
+
+Install https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en[postman] for Chrome
+
+In the chrome browser bar enter
+
+--------------
+chrome://apps/
+--------------
+
+And click on Postman.
+
+Enter the URL. Click on the Headers button on the far right. Enter the
+Accept: header. Click on the Basic Auth Tab at the top and setup the
+username and password. Send.
