--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -75,3 +75,5 @@ include::ttp/ttp-cli-tools-user.adoc[TTP]
 include::usc/odl-usc-channel-user.adoc[USC]
 
 include::vtn/vtn-user.adoc[]
+
+include::openflowplugin/odl-ofp-user-guide.adoc[]
