Openflow plugin - developer guide Li.
Change-Id: I676924d9f30c3c96073afdf067c775291a5d5e92
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -52,8 +52,6 @@ include::developing-app.adoc[]
 
 = Project-Specific Development Guides
 
-include::openflowplugin/openflowplugin-dev.adoc[OpenFlow]
-
 include::alto/alto-developer-guide.adoc[ALTO]
 
 include::bgpcep/odl-bgpcep-bgp-all-dev.adoc[BGP]
@@ -110,6 +108,8 @@ include::ttp/ttp-cli-tools-dev.adoc[]
 include::usc/odl-usc-channel-dev.adoc[]
 
 include::vtn/vtn-dev.adoc[]
+
+include::openflowplugin/odl-ofp-developer-guide.adoc[]
 
 :numbered!:
 
