Openflow plugin - developer guide Li.
Change-Id: I676924d9f30c3c96073afdf067c775291a5d5e92
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -109,6 +109,8 @@ include::usc/odl-usc-channel-dev.adoc[]
 
 include::vtn/vtn-dev.adoc[]
 
+include::openflowplugin/odl-ofp-developer-guide.adoc[]
+
 :numbered!:
 
 ///////
