Openflow plugin - developer guide Li.
Change-Id: I676924d9f30c3c96073afdf067c775291a5d5e92
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -52,8 +52,6 @@ include::developing-app.adoc[]
 
 = Project-Specific Development Guides
 
-include::openflowplugin/openflowplugin-dev.adoc[OpenFlow]
-
 include::alto/alto-developer-guide.adoc[ALTO]
 
 include::bgpcep/odl-bgpcep-bgp-all-dev.adoc[BGP]
@@ -87,6 +85,8 @@ include::opflex/agent-ovs-dev.adoc[]
 include::opflex/genie-dev.adoc[]
 
 include::opflex/libopflex-dev.adoc[]
+
+include::openflowplugin/odl-ofp-developer-guide.adoc[]
 
 include::ovsdb/ovsdb-developer.adoc[]
 
