Revived yangtools developers guide.
Change-Id: I1cfeb34599bf5988f5d2fd94ada4d65fa39dbb87
Signed-off-by: Tony Tkacik <ttkacik@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -111,6 +111,8 @@ include::usc/odl-usc-channel-dev.adoc[]
 
 include::vtn/vtn-dev.adoc[]
 
+include::yangtools/yangtools.adoc[]
+
 :numbered!:
 
 ///////
