Dev guide netconf
Change-Id: I91d8a922e610d74fde092684a8456dd547aeb107
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>
(cherry picked from commit 44c0a2a1cfc606eb459a4f5c53a578a3ffdf2789)

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -70,6 +70,8 @@ include::l2switch/l2switch-dev.adoc[]
 
 include::lacp/lacp-dev.adoc[]
 
+include::controller/netconf/odl-netconf-dev.adoc[]
+
 include::nic/nic-dev.adoc[]
 
 include::neutron/neutron.adoc[]
