Added the OpenFlow Plugin user guide.
Also restored the OpenFlow plugin developer guide from Helium.

Change-Id: I7b20705828032ef8df0b1eb6942103c582ebfcee
Signed-off-by: Abhijit Kumbhare <abhijit.kumbhare@ericsson.com>
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -78,7 +78,9 @@ include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
 
 include::openflowjava/odl-openflowjava-protocol-dev.adoc[]
 
+include::openflowplugin/old-ofp-openflowplugin-dev.adoc[]
 include::opflex/agent-ovs-dev.adoc[]
+
 
 include::opflex/genie-dev.adoc[]
 
