--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -28,6 +28,8 @@ include::../../../../getting-started-guide/src/main/asciidoc/ch-clustering.adoc[
 
 This second part of the user guide covers project specific usage instructions.
 
+include::openflowplugin/openflowplugin-user.adoc[OpenFlow]
+
 include::alto/alto-user-guide.adoc[ALTO]
 
 include::aaa/aaa.adoc[AAA]
