Openflowplugin developer guide.
Change-Id: I684f276ab67ba0c7ed55b68c1d86861723a4477f
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -52,6 +52,8 @@ include::developing-app.adoc[]
 
 = Project-Specific Development Guides
 
+include::openflowplugin/openflowplugin-user.adoc[OpenFlow]
+
 include::alto/alto-developer-guide.adoc[ALTO]
 
 include::bgpcep/odl-bgpcep-bgp-all-dev.adoc[BGP]
